# segmentation-engine-in-ros

./: CMakeLists.txt  README.md  common.h  engine.cpp  engine.h  loader.cpp  loader.h  logger.cpp  logger.h  logging.h  test.cpp
scripts/: color.py  eval.py  plot.py  proj.py  read_rosbag.py  utils.py
